# LLM-RL-Training

./: .gitignore  check_results.py  download_gsm8k.py  download_llms.py  main.tf  pyproject.toml  sampling_inference.py  terraform.tfstate
.github/workflows/: test.yml
src/: AnswerChecker.py  DataHandler.py  __init__.py  config.py  llm_inference.py  prompts.py  utils.py
tests/: test_DataHandler.py  test_llm_inference.py  test_utils.py
