[project]
name = "llm-rl-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.2.0",
    "ollama>=0.4.7",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pip>=25.0.1",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]
